[gd_scene load_steps=19 format=2]

[ext_resource path="res://textures/background/bg2.png" type="Texture" id=1]
[ext_resource path="res://textures/background/controlpanel.png" type="Texture" id=2]
[ext_resource path="res://scripts/PlayButton.gd" type="Script" id=3]
[ext_resource path="res://scenes/animations/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://textures/background/playbutton.png" type="Texture" id=5]
[ext_resource path="res://textures/background/title.png" type="Texture" id=6]
[ext_resource path="res://fonts/ConnectionIii-Rj3W.otf" type="DynamicFontData" id=7]
[ext_resource path="res://scripts/bobbing.gd" type="Script" id=8]
[ext_resource path="res://scripts/CreditsBody.gd" type="Script" id=9]
[ext_resource path="res://textures/background/shinybutton.png" type="Texture" id=10]
[ext_resource path="res://textures/objects/Placeholder.png" type="Texture" id=11]
[ext_resource path="res://scripts/disable_button_on_press.gd" type="Script" id=12]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/ConnectionIii-Rj3W.otf"

[sub_resource type="DynamicFont" id=2]
size = 26
extra_spacing_space = 4
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "FadeCreditsMenu"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 32
extra_spacing_space = 3
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=5]

[sub_resource type="CapsuleShape2D" id=6]

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 669.0
margin_bottom = 269.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="Sprite" parent="."]
position = Vector2( 510.5, 304.775 )
scale = Vector2( 0.47338, 0.556273 )
texture = ExtResource( 1 )

[node name="ControlPanel" type="Sprite" parent="."]
position = Vector2( 504, 834.697 )
scale = Vector2( 1.1875, 1.39074 )
texture = ExtResource( 2 )

[node name="CreditsBody" type="Label" parent="."]
margin_left = 1217.52
margin_top = -289.67
margin_right = 1740.52
margin_bottom = -82.6697
custom_fonts/font = SubResource( 2 )
text = "Credits:

- Drags890 (artist)



"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CreditsBody"]
anims/FadeCreditsMenu = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 304 )
current = true
zoom = Vector2( 2, 2 )

[node name="VersionNumber" type="RichTextLabel" parent="."]
margin_left = -501.147
margin_top = -287.151
margin_right = -201.147
margin_bottom = -235.151
custom_fonts/normal_font = SubResource( 4 )
text = "Pre-Alpha"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButtonOverlay" type="TextureButton" parent="."]
margin_left = 462.282
margin_top = 584.0
margin_right = 565.282
margin_bottom = 728.0
mouse_filter = 1
mouse_default_cursor_shape = 2
keep_pressed_outside = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="StaticBody2D" parent="."]
position = Vector2( -250.379, 87.7839 )
script = ExtResource( 8 )

[node name="title" type="Sprite" parent="Title"]
position = Vector2( 770.252, 831.803 )
scale = Vector2( 1.55469, 1.3497 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title/title"]
anims/bobbing = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title"]
shape = SubResource( 6 )

[node name="RichTextLabel2" type="RichTextLabel" parent="Title"]
margin_left = 530.727
margin_top = 976.727
margin_right = 967.727
margin_bottom = 1028.73
custom_fonts/normal_font = SubResource( 4 )
text = "A GAME BY NEO238 & DRAGS890"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
margin_left = -522.0
margin_top = -306.0
margin_right = -149.0
margin_bottom = 50.0
script = ExtResource( 3 )

[node name="PlayButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 479.0
margin_top = 591.0
margin_right = 556.0
margin_bottom = 719.0
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayButton" to="FadeIn" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_PlayButton_pressed"]
